tests/fixtures/pass/method-param.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

class Foo
{
    /**
     * @param Bar $bar
     */
    public function foo($bar)
    {
    }
}
