tests/fixtures/fail/method-param.php
<?php
namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @param Bar $bar
     */
    function foo($bar)
    {
    }
}